# tarefa2

./: Atividade.2.c  CMakeLists.txt  README.md  Tarefa2.c  diagram.json  wokwi.toml
